[package]
name = "janus"
version = "0.1.0"
authors = ["BearGuy <stephen@peterkins.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
warp = { git = "https://github.com/seanmonstar/warp" }
tokio = "0.2.0-alpha.6"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.2"
rusqlite = "0.21.0"
rust-argon2 = "0.6.0"
